--- a/ARealmRecorded.csproj
+++ b/ARealmRecorded.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Dalamud.NET.Sdk/12.0.2">
+<Project Sdk="Dalamud.NET.Sdk/13.0.0">
 
     <PropertyGroup>
         <Version>1.0.1.4</Version>
         <Nullable>disable</Nullable>
+        <Platforms>x64;x86</Platforms>
     </PropertyGroup>
 
 </Project>
